[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/default.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/node.gd" type="Script" id=2]
[ext_resource path="res://nodes/blob.svg" type="Texture" id=3]
[ext_resource path="res://nodes/pop.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/drop_area.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 23.6295

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.878431 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Node" type="Node2D"]
script = ExtResource( 2 )

[node name="DropArea" parent="." instance=ExtResource( 6 )]

[node name="Arrows" type="Node2D" parent="."]
z_index = -1

[node name="Rect" type="ColorRect" parent="."]
visible = false
margin_left = -29.0
margin_top = -28.0
margin_right = 29.0
margin_bottom = 29.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="ID" type="Label" parent="."]
visible = false
margin_left = -19.9265
margin_top = -12.0097
margin_right = 129.073
margin_bottom = 40.9903
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "object_id"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Content" type="Node2D" parent="."]
z_index = 1

[node name="ContentLabel" type="Label" parent="Content"]
visible = false
margin_left = -22.057
margin_top = 31.1738
margin_right = -12.057
margin_bottom = 66.1738
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Rect" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Rect" to="." method="_on_unhover"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_hover"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_unhover"]
